ppc: Add a new MicroWatt machine
Start with a kernel :

  -kernel vmlinux -initrd rootfs.cpio -dtb microwatt.dtb
  -kernel dtbImage.microwatt.elf

or with some lowlevel test :

  -kernel sdram_init.elf
  -kernel decrementer.elf

The -bios option assumes the file contains an initial sdram_init
loader to be mapped at 0xff000000 :

  -bios sdram_init.bin

Add some real contents with a SPI flash image file :

  -drive file=./flash-microwatt,format=raw,if=mtd

Without a -bios or a -kernel file but with a mtd drive, the machine
considers that the drive file starts with an sdram_init loader and
loads it at 0xff000000, just like -bios.

To create the flash image file :

  dd of=./flash-microwatt if=/path/to/sdram_init
  dd of=./flash-microwatt if=/path/to/dtbImage.microwatt.elf bs=1K seek=4096
  truncate --size 16M ./flash-microwatt

Signed-off-by: Cédric Le Goater <clg@kaod.org>

--- a/hw/ppc/meson.build
+++ b/hw/ppc/meson.build
@@ -38,6 +38,12 @@ ppc_ss.add(when: ['CONFIG_PSERIES', 'CONFIG_LINUX'], if_true: files(
   'spapr_pci_nvlink2.c'
 ))
 
+# Microwatt
+ppc_ss.add(when: 'CONFIG_MICROWATT', if_true: files(
+  'microwatt.c',
+  'mw_core.c',
+))
+
 # IBM PowerNV
 ppc_ss.add(when: 'CONFIG_POWERNV', if_true: files(
   'pnv.c',
