hw/net: Add LiteEth model
Signed-off-by: Joel Stanley <joel@jms.id.au>
[ clg: misc fixes ]
Signed-off-by: Cédric Le Goater <clg@kaod.org>

--- a/hw/net/meson.build
+++ b/hw/net/meson.build
@@ -33,6 +33,7 @@ softmmu_ss.add(when: 'CONFIG_STELLARIS_ENET', if_true: files('stellaris_enet.c')
 softmmu_ss.add(when: 'CONFIG_LANCE', if_true: files('lance.c'))
 softmmu_ss.add(when: 'CONFIG_LASI_I82596', if_true: files('lasi_i82596.c'))
 softmmu_ss.add(when: 'CONFIG_I82596_COMMON', if_true: files('i82596.c'))
+softmmu_ss.add(when: 'CONFIG_LITEETH', if_true: files('liteeth.c'))
 softmmu_ss.add(when: 'CONFIG_SUNHME', if_true: files('sunhme.c'))
 softmmu_ss.add(when: 'CONFIG_FTGMAC100', if_true: files('ftgmac100.c'))
 softmmu_ss.add(when: 'CONFIG_SUNGEM', if_true: files('sungem.c'))
